{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 670,
  "lineage": "99939043-6dc5-49c7-aca8-a324e971dcf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a4fb44aca64da1a",
            "association_id": "eipassoc-04fdb3d56eca2eaa1",
            "domain": "vpc",
            "id": "eipalloc-04a4fb44aca64da1a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e6b3119f4c5cce6",
            "private_dns": "ip-10-2-7-92.ec2.internal",
            "private_ip": "10.2.7.92",
            "public_dns": "ec2-3-220-178-229.compute-1.amazonaws.com",
            "public_ip": "3.220.178.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:internet-gateway/igw-04da6492b6ef91a5e",
            "id": "igw-04da6492b6ef91a5e",
            "owner_id": "867573885046",
            "tags": {
              "name": "igw_core5g"
            },
            "tags_all": {
              "name": "igw_core5g"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a4fb44aca64da1a",
            "association_id": "eipassoc-04fdb3d56eca2eaa1",
            "connectivity_type": "public",
            "id": "nat-024b064c5b78ea92d",
            "network_interface_id": "eni-05e6b3119f4c5cce6",
            "private_ip": "10.2.7.92",
            "public_ip": "3.220.178.229",
            "subnet_id": "subnet-0122572fe5462ef26",
            "tags": {
              "name": "nat_gw"
            },
            "tags_all": {
              "name": "nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_subnet",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "dp_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:network-acl/acl-0f944bfaf2f765856",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              }
            ],
            "id": "acl-0f944bfaf2f765856",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.2.7.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              }
            ],
            "owner_id": "867573885046",
            "subnet_ids": [
              "subnet-07db2b9953563695c",
              "subnet-09274ae3ec76ec89e"
            ],
            "tags": {
              "Name": "dp_sub_acl"
            },
            "tags_all": {
              "Name": "dp_sub_acl"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet_dp_1",
            "aws_subnet.subnet_dp_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "k8s_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:network-acl/acl-06671d1486e697a9e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              }
            ],
            "id": "acl-06671d1486e697a9e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 310,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.2.7.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 22
              }
            ],
            "owner_id": "867573885046",
            "subnet_ids": [
              "subnet-09ae6c5931f418626"
            ],
            "tags": {
              "Name": "k8s_sub_acl"
            },
            "tags_all": {
              "Name": "k8s_sub_acl"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet_k8s_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "pub_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:network-acl/acl-05efbdf47f6bfcf89",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              }
            ],
            "id": "acl-05efbdf47f6bfcf89",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              }
            ],
            "owner_id": "867573885046",
            "subnet_ids": [
              "subnet-0122572fe5462ef26"
            ],
            "tags": {
              "Name": "pub_sub_acl"
            },
            "tags_all": {
              "Name": "pub_sub_acl"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.pub_subnet",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "sig_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:network-acl/acl-048e91c56abb4bed8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              }
            ],
            "id": "acl-048e91c56abb4bed8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.2.7.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              }
            ],
            "owner_id": "867573885046",
            "subnet_ids": [
              "subnet-01ca296ca98e9e65b",
              "subnet-09d79c820bc5ef445"
            ],
            "tags": {
              "Name": "sig_sub_acl"
            },
            "tags_all": {
              "Name": "sig_sub_acl"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet_sig_1",
            "aws_subnet.subnet_sig_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "dp_sub_internet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1633999684",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f944bfaf2f765856",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.dp_sub_acl",
            "aws_subnet.subnet_dp_1",
            "aws_subnet.subnet_dp_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "dp_sub_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.7.0/24",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2690477028",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f944bfaf2f765856",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.dp_sub_acl",
            "aws_subnet.subnet_dp_1",
            "aws_subnet.subnet_dp_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "k8s_any_out_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-236074604",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06671d1486e697a9e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.k8s_sub_acl",
            "aws_subnet.subnet_k8s_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "k8s_internet_in_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2222043319",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06671d1486e697a9e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 310,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.k8s_sub_acl",
            "aws_subnet.subnet_k8s_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "k8s_ssh_in_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.7.0/24",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3387073549",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-06671d1486e697a9e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.k8s_sub_acl",
            "aws_subnet.subnet_k8s_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_any_in_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2517406283",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05efbdf47f6bfcf89",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.pub_sub_acl",
            "aws_subnet.pub_subnet",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_any_out_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-89605621",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05efbdf47f6bfcf89",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.pub_sub_acl",
            "aws_subnet.pub_subnet",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "sig_sub_internet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-979790178",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-048e91c56abb4bed8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.sig_sub_acl",
            "aws_subnet.subnet_sig_1",
            "aws_subnet.subnet_sig_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "sig_sub_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.2.7.0/24",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1913384107",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-048e91c56abb4bed8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.sig_sub_acl",
            "aws_subnet.subnet_sig_1",
            "aws_subnet.subnet_sig_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_table_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:route-table/rtb-06174d001e1c4a182",
            "id": "rtb-06174d001e1c4a182",
            "owner_id": "867573885046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-024b064c5b78ea92d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "priv_table_route"
            },
            "tags_all": {
              "name": "priv_table_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.pub_subnet",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_table_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:route-table/rtb-012e4a8e13cf6ea24",
            "id": "rtb-012e4a8e13cf6ea24",
            "owner_id": "867573885046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04da6492b6ef91a5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "pub_table_route"
            },
            "tags_all": {
              "name": "pub_table_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_k8s1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f56b8389a8ab7cb",
            "route_table_id": "rtb-06174d001e1c4a182",
            "subnet_id": "subnet-09ae6c5931f418626"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.priv_table_route",
            "aws_subnet.pub_subnet",
            "aws_subnet.subnet_k8s_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a74deff2f820026",
            "route_table_id": "rtb-012e4a8e13cf6ea24",
            "subnet_id": "subnet-0122572fe5462ef26"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_table_route",
            "aws_subnet.pub_subnet",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_dp_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb16ca84182d6dab",
            "route_table_id": "rtb-06174d001e1c4a182",
            "subnet_id": "subnet-09274ae3ec76ec89e"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.priv_table_route",
            "aws_subnet.pub_subnet",
            "aws_subnet.subnet_dp_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_dp_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047dfbe61fbc804da",
            "route_table_id": "rtb-06174d001e1c4a182",
            "subnet_id": "subnet-07db2b9953563695c"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.priv_table_route",
            "aws_subnet.pub_subnet",
            "aws_subnet.subnet_dp_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_sig_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319556aaa08229ed",
            "route_table_id": "rtb-06174d001e1c4a182",
            "subnet_id": "subnet-01ca296ca98e9e65b"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.priv_table_route",
            "aws_subnet.pub_subnet",
            "aws_subnet.subnet_sig_1",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_sig_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060821a20b22bd3bd",
            "route_table_id": "rtb-06174d001e1c4a182",
            "subnet_id": "subnet-09d79c820bc5ef445"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.priv_table_route",
            "aws_subnet.pub_subnet",
            "aws_subnet.subnet_sig_2",
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:security-group/sg-0e6057daebcc300b8",
            "description": "Allow SSH and Internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6057daebcc300b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.7.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-and-internet-priv",
            "name_prefix": "",
            "owner_id": "867573885046",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:security-group/sg-0e49d0bc68d3c3dbc",
            "description": "Allow SSH and Internet access inside host in pub subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e49d0bc68d3c3dbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-ssh-and-internet-pub",
            "name_prefix": "",
            "owner_id": "867573885046",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:subnet/subnet-0122572fe5462ef26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0122572fe5462ef26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867573885046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pub_subnet"
            },
            "tags_all": {
              "name": "pub_subnet"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_dp_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:subnet/subnet-09274ae3ec76ec89e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09274ae3ec76ec89e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867573885046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "dp_subnet1"
            },
            "tags_all": {
              "name": "dp_subnet1"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_dp_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:subnet/subnet-07db2b9953563695c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07db2b9953563695c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867573885046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "dp_subnet2"
            },
            "tags_all": {
              "name": "dp_subnet2"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_k8s_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:subnet/subnet-09ae6c5931f418626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ae6c5931f418626",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867573885046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "k8s_subnet"
            },
            "tags_all": {
              "name": "k8s_subnet"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_sig_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:subnet/subnet-01ca296ca98e9e65b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca296ca98e9e65b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867573885046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "signaling_subnet1"
            },
            "tags_all": {
              "name": "signaling_subnet1"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_sig_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:subnet/subnet-09d79c820bc5ef445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d79c820bc5ef445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867573885046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "signaling_subnet2"
            },
            "tags_all": {
              "name": "signaling_subnet2"
            },
            "vpc_id": "vpc-02c36512a143a754c"
          },
          "dependencies": [
            "aws_vpc.core5g_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "core5g_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867573885046:vpc/vpc-02c36512a143a754c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-01b9546b861d0491d",
            "default_route_table_id": "rtb-0fbfa476276299536",
            "default_security_group_id": "sg-045f911e0250b9299",
            "dhcp_options_id": "dopt-0dd76b7eb1a24c8ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c36512a143a754c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbfa476276299536",
            "owner_id": "867573885046",
            "tags": {
              "name": "core5g_vpc"
            },
            "tags_all": {
              "name": "core5g_vpc"
            }
          }
        }
      ]
    }
  ]
}